--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,3 +20,13 @@ spring.servlet.multipart.max-request-size=10MB
 # Server properties
 server.tomcat.max-http-form-post-size=100000000
 server.tomcat.max-swallow-size=100000000
+
+# google
+google.clientId=863397394110-qkvobkibe4phn7d4lf0ai13sk5caubdg.apps.googleusercontent.com
+
+# jwt
+jwt.secret=kajshdfklhasdkflhlsifyiqewyfiadhsfjahdsfk
+jwt.expiration=3600000
+
+# secretPsw
+secretPsw=kasdjhfkadhsY776ggTyUU65khaskdjfhYuHAwjñlji
